# hyperlight-wasm-http-example

./: .gitignore  Cargo.toml  LICENSE  README.md  bindings.patch  hyperlight.wit  justfile  package-lock.json  package.json  rollup.config.js
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CreateDevcontainerImage.yml  ci.yml
guest/: Cargo.toml
guest/src/: lib.rs
guest_js/: README.md  server.js
guest_js/endpoints/: echo.js  sleep.js  upload.js
guest_rust/: README.md
guest_rust/src/: lib.rs
src/: bindings.rs  main.rs  resource.rs  sandbox_pool.rs  types.rs  worker.rs
src/types/: cli.rs  http_outgoing_body.rs  http_outgoing_handler.rs  io_poll.rs  random.rs
src/wasi_impl/: mod.rs  resource.rs  types.rs
src/wasi_impl/types/: cli.rs  clocks_monotonic_clock.rs  clocks_wall_clock.rs  http_future_headers.rs  http_future_incoming_response.rs  http_headers.rs  http_incoming_body.rs  http_incoming_request.rs  http_incoming_response.rs  http_outgoing_body.rs  http_outgoing_handler.rs  http_outgoing_request.rs  http_outgoing_response.rs  http_request_options.rs  http_response_outparam.rs  io_error.rs  io_poll.rs  io_stream.rs  random.rs  sockets.rs  types.rs
wit/guest_js/: world.wit
wit/guest_js_debug/: world.wit
wit/host/: hyperlight.wit
