[package]
name = "hyperlight-wasm-http-example"
edition = "2024"

[dependencies]
hyperlight-component-macro = { git="https://github.com/hyperlight-dev/hyperlight.git", rev="b7e0481ad1086481da3e7795b4733a7683ba80c8" }
hyperlight-common = { git="https://github.com/hyperlight-dev/hyperlight.git", rev="b7e0481ad1086481da3e7795b4733a7683ba80c8" }
hyperlight-host = { git="https://github.com/hyperlight-dev/hyperlight.git", rev="b7e0481ad1086481da3e7795b4733a7683ba80c8", default-features = false, features = [ "kvm", "mshv2" ] }
hyperlight-wasm = { git="https://github.com/jprendes/hyperlight-wasm.git", rev="6fde4c5cc5505051a9a76c05c40c5a214b543860" }

hyper = "1.7"
reqwest = { version = "0.12", features = ["stream", "gzip", "brotli", "deflate", "rustls-tls", "blocking"] }
bytes = "1"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
getrandom = "0.3.3"
