[package]
name = "hyperlight-wasm-http-example"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1"
clap = { version = "4.5.60", features = ["derive"] }
getrandom = "0.3.3"
http-body-util = "0.1"
hyper = "1.7"
hyper-util = { version = "0.1", features = ["full"] }
hyperlight-component-macro = { version = "0.12.0" }
hyperlight-common = { version = "0.12.0" }
hyperlight-host = { version = "0.12.0", default-features = false, features = [ "kvm", "mshv3" ] }
hyperlight-wasm = { version = "0.12.0" }
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["stream", "gzip", "brotli", "deflate", "rustls-tls", "blocking"] }
tokio = { version = "1.47", features = ["full"] }

[features]
gdb = ["hyperlight-wasm/gdb"]
